# MCP

AI-Assistant/: .env  app.py  browser_mcp.json  pyproject.toml
Report Generation/: .env  README.md  main.py  prompts.py  report_generator.py  requirements.txt  web_search.py
Report Generation/examples/: agentic_ai_report.md  conversational_qa_chain_langchain_report.md  gnn_report.md
Structured-Report-Generation/: .env  README.md  main.py  prompts.py  pyproject.toml  requirements.txt  web_search.py
Structured-Report-Generation/examples/: ai_agents_in_scientic_research_purposes_report.md
